Saving of record triggers list refresh

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<!-- <userentryform></userentryform> -->
-
-<userslist></userslist>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8">
+      <userentryform (recordSaved)="recordSaved()"></userentryform>
+    </div>
+    <div class="col-md-4">
+      <userslist></userslist>
+    </div>
+  </div>
+</div>
