action for fetching users list added

--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -10,7 +10,7 @@
             </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of users" (click)="selectUser(user)" >
+        <tr *ngFor="let user of (users|async)" (click)="selectUser(user)" >
           <td>
             {{user.displayName}}
           </td>
